added SVG files for noTasks and error messages added Message component and test added some styles added some translations

--- a/src/shared/config/i18n/locales/en.json
+++ b/src/shared/config/i18n/locales/en.json
@@ -17,6 +17,7 @@
   "failed_to_change_language": "Failed to change language. Please try again.",
   "favorite": "Favorite",
   "hint_for_creating_tasks": "Hint for creating tasks",
+  "image": "image",
   "mark_as_favorite": "Mark as favorite",
   "no_completed_tasks_message": "You have no completed tasks.",
   "no_tasks_message": "You have no tasks yet. It's a great time to create some!",
