--- a/src/shared/config/i18n/locales/ru.json
+++ b/src/shared/config/i18n/locales/ru.json
@@ -17,6 +17,7 @@
   "failed_to_change_language": "Не удалось изменить язык. Пожалуйста, попробуйте еще раз.",
   "favorite": "Избранные",
   "hint_for_creating_tasks": "Подсказка по созданию задач",
+  "image": "изображение",
   "mark_as_favorite": "Добавить в избранное",
   "no_completed_tasks_message": "У вас нет завершенных задач.",
   "no_tasks_message": "У вас пока нет задач. Самое время создать новые!",
